--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,8 +19,8 @@ requirements:
     - libnetcdf 4.4.*
     - jasper
     - g2clib
-    - libpng >=1.6.28,<1.7
-    - libtiff 4.0.*
+    - libpng >=1.6.2,<1.6.31
+    - libtiff >=4.0.3,<4.0.8
     - jpeg 9*
     - libdrs
     - libgfortran
@@ -30,8 +30,8 @@ requirements:
     - libnetcdf 4.4.*
     - jasper
     - g2clib
-    - libpng >=1.6.28,<1.7
-    - libtiff 4.0.*
+    - libpng >=1.6.2,<1.6.31
+    - libtiff >=4.0.3,<4.0.8
     - jpeg 9*
     - libdrs
     - libgfortran
