--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,13 +11,13 @@ source:
   sha256: 9e62f77562f667db559466092cb0d908abf67a3216f7faaf152348a72f46786e
 
 build:
-  number: 0
+  number: 1
   skip: True  # [win] 
 
 requirements:
   build:
-    - hdf5 1.10.*
-    - libnetcdf 4.4.*
+    - hdf5 >1.10.*
+    - libnetcdf >4.*
     - jasper
     - g2clib
     - libpng >=1.6.28,<1.7
@@ -26,8 +26,8 @@ requirements:
     - libdrs
     - gcc
   run:
-    - hdf5 1.10.*
-    - libnetcdf 4.4.*
+    - hdf5 >1.10.*
+    - libnetcdf >4.*
     - jasper
     - g2clib
     - libpng >=1.6.28,<1.7
