Patch to remove use of undefined NC5 magic cookie

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,6 +9,8 @@ package:
 source:
   url: https://github.com/CDAT/libcdms/archive/v{{ version }}.tar.gz
   sha256: 2010ef24f8f8c14a6f997206ec342e6fed9703b81f8641d70bebc992a3855e8c
+  patches:
+    - 0001-limit-nc5-support.patch
 
 build:
   number: {{ build }}
